[tool.poetry]
name = "buffy"
version = "0.1.0"
description = "Shared framebuffer chat server"
authors = ["Ossi Rajuvaara <ossi@robocorp.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
